// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`it works 1`] = `
.c0 {
  font-size: 1rem;
  font-family: Montserrat,sans-serif;
  line-height: 2;
  font-weight: 400;
  color: #292B3E;
}

.c0 > p {
  margin-bottom: 0.5rem;
}

.c0 > p:last-child {
  margin-bottom: 0;
}

.c1 {
  border-style: solid;
  text-align: center;
  display: inline-block;
  position: relative;
  font-size: 1rem;
  font-weight: 500;
  border-radius: 9999px;
  border-width: 2px;
  box-shadow: 0 2px 3px rgba(0,0,0,0.1);
  padding-left: 0.75rem;
  padding-right: 0.75rem;
  padding-top: 0.5rem;
  padding-bottom: 0.5rem;
  background-color: #17a3a5;
  color: white;
  border-color: #17a3a5;
  border-top-color: transparent;
  border-right-color: transparent;
  border-bottom-color: transparent;
  border-left-color: transparent;
}

.c1:hover {
  cursor: pointer;
  background-color: #135f61;
  color: white;
}

.c1:hover:disabled {
  cursor: not-allowed;
  background-color: #135f61;
}

.c1:disabled {
  opacity: 0.7;
  background-color: #135f61;
  color: white;
}

.c2 {
  opacity: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

<button
  class="c0 c1"
>
  <div
    class="c2"
  >
    <svg
      aria-hidden="true"
      class="svg-inline--fa fa-circle "
      data-icon="circle"
      data-prefix="fas"
      focusable="false"
      role="img"
      style="margin-right: 0.5rem;"
      viewBox="0 0 512 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M512 256C512 397.4 397.4 512 256 512C114.6 512 0 397.4 0 256C0 114.6 114.6 0 256 0C397.4 0 512 114.6 512 256z"
        fill="currentColor"
      />
    </svg>
    Hello world
  </div>
</button>
`;

exports[`it works 2`] = `
.c0 {
  font-size: 1rem;
  font-family: Montserrat,sans-serif;
  line-height: 2;
  font-weight: 400;
  color: #292B3E;
}

.c0 > p {
  margin-bottom: 0.5rem;
}

.c0 > p:last-child {
  margin-bottom: 0;
}

.c1 {
  border-style: solid;
  text-align: center;
  display: inline-block;
  position: relative;
  font-size: 1rem;
  font-weight: 500;
  border-radius: 9999px;
  border-width: 2px;
  box-shadow: 0 2px 3px rgba(0,0,0,0.1);
  padding-left: 0.75rem;
  padding-right: 0.75rem;
  padding-top: 0.5rem;
  padding-bottom: 0.5rem;
  background-color: white;
  color: #17a3a5;
  border-color: #d4d4d4;
  border-top-color: transparent;
  border-right-color: transparent;
  border-bottom-color: transparent;
  border-left-color: transparent;
}

.c1:hover {
  cursor: pointer;
  background-color: #fafafa;
  color: #135f61;
}

.c1:hover:disabled {
  cursor: not-allowed;
  background-color: #fafafa;
}

.c1:disabled {
  opacity: 0.7;
  background-color: #fafafa;
  color: #292B3E;
}

.c2 {
  opacity: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

<button
  class="c0 c1"
>
  <div
    class="c2"
  >
    <svg
      aria-hidden="true"
      class="svg-inline--fa fa-circle "
      data-icon="circle"
      data-prefix="fas"
      focusable="false"
      role="img"
      style="margin-right: 0.5rem;"
      viewBox="0 0 512 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M512 256C512 397.4 397.4 512 256 512C114.6 512 0 397.4 0 256C0 114.6 114.6 0 256 0C397.4 0 512 114.6 512 256z"
        fill="currentColor"
      />
    </svg>
    Hello world
  </div>
</button>
`;

exports[`it works 3`] = `
.c0 {
  font-size: 1rem;
  font-family: Montserrat,sans-serif;
  line-height: 2;
  font-weight: 400;
  color: #292B3E;
}

.c0 > p {
  margin-bottom: 0.5rem;
}

.c0 > p:last-child {
  margin-bottom: 0;
}

.c1 {
  border-style: solid;
  text-align: center;
  display: inline-block;
  position: relative;
  font-size: 1rem;
  font-weight: 500;
  border-radius: 9999px;
  border-width: 2px;
  box-shadow: 0 2px 3px rgba(0,0,0,0.1);
  padding-left: 0.75rem;
  padding-right: 0.75rem;
  padding-top: 0.5rem;
  padding-bottom: 0.5rem;
  background-color: white;
  color: #73748b;
  border-color: #fafafa;
  border-top-color: transparent;
  border-right-color: transparent;
  border-bottom-color: transparent;
  border-left-color: transparent;
}

.c1:hover {
  cursor: pointer;
  background-color: #fafafa;
  color: #292B3E;
}

.c1:hover:disabled {
  cursor: not-allowed;
  background-color: #fafafa;
}

.c1:disabled {
  opacity: 0.7;
  background-color: #fafafa;
  color: #292B3E;
}

.c2 {
  opacity: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

<button
  class="c0 c1"
>
  <div
    class="c2"
  >
    <svg
      aria-hidden="true"
      class="svg-inline--fa fa-circle "
      data-icon="circle"
      data-prefix="fas"
      focusable="false"
      role="img"
      style="margin-right: 0.5rem;"
      viewBox="0 0 512 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M512 256C512 397.4 397.4 512 256 512C114.6 512 0 397.4 0 256C0 114.6 114.6 0 256 0C397.4 0 512 114.6 512 256z"
        fill="currentColor"
      />
    </svg>
    Hello world
  </div>
</button>
`;

exports[`it works 4`] = `
.c0 {
  font-size: 1rem;
  font-family: Montserrat,sans-serif;
  line-height: 2;
  font-weight: 400;
  color: #292B3E;
}

.c0 > p {
  margin-bottom: 0.5rem;
}

.c0 > p:last-child {
  margin-bottom: 0;
}

.c1 {
  border-style: solid;
  text-align: center;
  display: inline-block;
  position: relative;
  font-size: 1rem;
  font-weight: 500;
  border-radius: 9999px;
  border-width: 2px;
  box-shadow: 0 2px 3px rgba(0,0,0,0.1);
  padding-left: 0.75rem;
  padding-right: 0.75rem;
  padding-top: 0.5rem;
  padding-bottom: 0.5rem;
  background-color: white;
  color: #b41e25;
  border-color: #810000;
  border-top-color: transparent;
  border-right-color: transparent;
  border-bottom-color: transparent;
  border-left-color: transparent;
}

.c1:hover {
  cursor: pointer;
  background-color: #fafafa;
  color: #810000;
}

.c1:hover:disabled {
  cursor: not-allowed;
  background-color: #fafafa;
}

.c1:disabled {
  opacity: 0.7;
  background-color: #fafafa;
  color: #292B3E;
}

.c2 {
  opacity: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

<button
  class="c0 c1"
>
  <div
    class="c2"
  >
    <svg
      aria-hidden="true"
      class="svg-inline--fa fa-circle "
      data-icon="circle"
      data-prefix="fas"
      focusable="false"
      role="img"
      style="margin-right: 0.5rem;"
      viewBox="0 0 512 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M512 256C512 397.4 397.4 512 256 512C114.6 512 0 397.4 0 256C0 114.6 114.6 0 256 0C397.4 0 512 114.6 512 256z"
        fill="currentColor"
      />
    </svg>
    Hello world
  </div>
</button>
`;

exports[`it works with checked 1`] = `
.c0 {
  font-size: 1rem;
  font-family: Montserrat,sans-serif;
  line-height: 2;
  font-weight: 400;
  color: #292B3E;
}

.c0 > p {
  margin-bottom: 0.5rem;
}

.c0 > p:last-child {
  margin-bottom: 0;
}

.c1 {
  border-style: solid;
  text-align: center;
  display: inline-block;
  position: relative;
  font-size: 1rem;
  font-weight: 500;
  border-radius: 9999px;
  border-width: 2px;
  box-shadow: 0 2px 3px rgba(0,0,0,0.1);
  padding-left: 0.75rem;
  padding-right: 0.75rem;
  padding-top: 0.5rem;
  padding-bottom: 0.5rem;
  background-color: #17a3a5;
  color: white;
  border-color: #17a3a5;
  border-top-color: #73748b;
  border-right-color: #73748b;
  border-bottom-color: #73748b;
  border-left-color: #73748b;
}

.c1:hover {
  cursor: pointer;
  background-color: #135f61;
  color: white;
}

.c1:hover:disabled {
  cursor: not-allowed;
  background-color: #135f61;
}

.c1:disabled {
  opacity: 0.7;
  background-color: #135f61;
  color: white;
}

.c2 {
  opacity: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

<button
  class="c0 c1"
>
  <div
    class="c2"
  >
    <svg
      aria-hidden="true"
      class="svg-inline--fa fa-circle-dot "
      data-icon="circle-dot"
      data-prefix="fas"
      focusable="false"
      role="img"
      style="margin-right: 0.5rem;"
      viewBox="0 0 512 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M0 256C0 114.6 114.6 0 256 0C397.4 0 512 114.6 512 256C512 397.4 397.4 512 256 512C114.6 512 0 397.4 0 256zM256 352C309 352 352 309 352 256C352 202.1 309 160 256 160C202.1 160 160 202.1 160 256C160 309 202.1 352 256 352z"
        fill="currentColor"
      />
    </svg>
    Hello world
  </div>
</button>
`;

exports[`it works with checked 2`] = `
.c0 {
  font-size: 1rem;
  font-family: Montserrat,sans-serif;
  line-height: 2;
  font-weight: 400;
  color: #292B3E;
}

.c0 > p {
  margin-bottom: 0.5rem;
}

.c0 > p:last-child {
  margin-bottom: 0;
}

.c1 {
  border-style: solid;
  text-align: center;
  display: inline-block;
  position: relative;
  font-size: 1rem;
  font-weight: 500;
  border-radius: 9999px;
  border-width: 2px;
  box-shadow: 0 2px 3px rgba(0,0,0,0.1);
  padding-left: 0.75rem;
  padding-right: 0.75rem;
  padding-top: 0.5rem;
  padding-bottom: 0.5rem;
  background-color: white;
  color: #17a3a5;
  border-color: #d4d4d4;
  border-top-color: #73748b;
  border-right-color: #73748b;
  border-bottom-color: #73748b;
  border-left-color: #73748b;
}

.c1:hover {
  cursor: pointer;
  background-color: #fafafa;
  color: #135f61;
}

.c1:hover:disabled {
  cursor: not-allowed;
  background-color: #fafafa;
}

.c1:disabled {
  opacity: 0.7;
  background-color: #fafafa;
  color: #292B3E;
}

.c2 {
  opacity: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

<button
  class="c0 c1"
>
  <div
    class="c2"
  >
    <svg
      aria-hidden="true"
      class="svg-inline--fa fa-circle-dot "
      data-icon="circle-dot"
      data-prefix="fas"
      focusable="false"
      role="img"
      style="margin-right: 0.5rem;"
      viewBox="0 0 512 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M0 256C0 114.6 114.6 0 256 0C397.4 0 512 114.6 512 256C512 397.4 397.4 512 256 512C114.6 512 0 397.4 0 256zM256 352C309 352 352 309 352 256C352 202.1 309 160 256 160C202.1 160 160 202.1 160 256C160 309 202.1 352 256 352z"
        fill="currentColor"
      />
    </svg>
    Hello world
  </div>
</button>
`;

exports[`it works with checked 3`] = `
.c0 {
  font-size: 1rem;
  font-family: Montserrat,sans-serif;
  line-height: 2;
  font-weight: 400;
  color: #292B3E;
}

.c0 > p {
  margin-bottom: 0.5rem;
}

.c0 > p:last-child {
  margin-bottom: 0;
}

.c1 {
  border-style: solid;
  text-align: center;
  display: inline-block;
  position: relative;
  font-size: 1rem;
  font-weight: 500;
  border-radius: 9999px;
  border-width: 2px;
  box-shadow: 0 2px 3px rgba(0,0,0,0.1);
  padding-left: 0.75rem;
  padding-right: 0.75rem;
  padding-top: 0.5rem;
  padding-bottom: 0.5rem;
  background-color: white;
  color: #73748b;
  border-color: #fafafa;
  border-top-color: #73748b;
  border-right-color: #73748b;
  border-bottom-color: #73748b;
  border-left-color: #73748b;
}

.c1:hover {
  cursor: pointer;
  background-color: #fafafa;
  color: #292B3E;
}

.c1:hover:disabled {
  cursor: not-allowed;
  background-color: #fafafa;
}

.c1:disabled {
  opacity: 0.7;
  background-color: #fafafa;
  color: #292B3E;
}

.c2 {
  opacity: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

<button
  class="c0 c1"
>
  <div
    class="c2"
  >
    <svg
      aria-hidden="true"
      class="svg-inline--fa fa-circle-dot "
      data-icon="circle-dot"
      data-prefix="fas"
      focusable="false"
      role="img"
      style="margin-right: 0.5rem;"
      viewBox="0 0 512 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M0 256C0 114.6 114.6 0 256 0C397.4 0 512 114.6 512 256C512 397.4 397.4 512 256 512C114.6 512 0 397.4 0 256zM256 352C309 352 352 309 352 256C352 202.1 309 160 256 160C202.1 160 160 202.1 160 256C160 309 202.1 352 256 352z"
        fill="currentColor"
      />
    </svg>
    Hello world
  </div>
</button>
`;

exports[`it works with checked 4`] = `
.c0 {
  font-size: 1rem;
  font-family: Montserrat,sans-serif;
  line-height: 2;
  font-weight: 400;
  color: #292B3E;
}

.c0 > p {
  margin-bottom: 0.5rem;
}

.c0 > p:last-child {
  margin-bottom: 0;
}

.c1 {
  border-style: solid;
  text-align: center;
  display: inline-block;
  position: relative;
  font-size: 1rem;
  font-weight: 500;
  border-radius: 9999px;
  border-width: 2px;
  box-shadow: 0 2px 3px rgba(0,0,0,0.1);
  padding-left: 0.75rem;
  padding-right: 0.75rem;
  padding-top: 0.5rem;
  padding-bottom: 0.5rem;
  background-color: white;
  color: #b41e25;
  border-color: #810000;
  border-top-color: #73748b;
  border-right-color: #73748b;
  border-bottom-color: #73748b;
  border-left-color: #73748b;
}

.c1:hover {
  cursor: pointer;
  background-color: #fafafa;
  color: #810000;
}

.c1:hover:disabled {
  cursor: not-allowed;
  background-color: #fafafa;
}

.c1:disabled {
  opacity: 0.7;
  background-color: #fafafa;
  color: #292B3E;
}

.c2 {
  opacity: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

<button
  class="c0 c1"
>
  <div
    class="c2"
  >
    <svg
      aria-hidden="true"
      class="svg-inline--fa fa-circle-dot "
      data-icon="circle-dot"
      data-prefix="fas"
      focusable="false"
      role="img"
      style="margin-right: 0.5rem;"
      viewBox="0 0 512 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M0 256C0 114.6 114.6 0 256 0C397.4 0 512 114.6 512 256C512 397.4 397.4 512 256 512C114.6 512 0 397.4 0 256zM256 352C309 352 352 309 352 256C352 202.1 309 160 256 160C202.1 160 160 202.1 160 256C160 309 202.1 352 256 352z"
        fill="currentColor"
      />
    </svg>
    Hello world
  </div>
</button>
`;
